# catalogues

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  Dockerfile  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/app/: Dockerfile  config.json  requirements.txt
docker/database/: Dockerfile  dump-references-202202031437.sql  init-user-db.sh  postgresql.conf
docker/database/init/: 1-init.sh  1.sh  2-reference_load.sql  2.sql
src/config/: database.json  database.py  service.py
src/database/: custom_fields.py  helpers.py
src/database/models/: codex.py  ervk.py  okved.py  references.py
src/service/: asgi.py  settings.py  wsgi.py
src/service/models/: catalogues.py  references.py
src/service/routes/: acts.py  catalogues.py  publication.py  subjects.py  work.py
src/service/routes/references/: __init__.py  acts.py  control.py  evaluation.py  levels.py  organizations.py  publication.py  publications.py  regulation.py  subjects.py  validity.py  work.py  working.py
src/service/schemas/: catalogues.py  references.py
tests/: test_catalogues.py
