[tool.poetry]
name = "catalogues"
version = "0.1.0"
description = ""
authors = ["rsaleev <rs.aleev@gmail.com>"]
packages = [
    {include = "./src"}
]

[tool.poetry.dependencies]
python = "^3.9"
uvloop = "^0.16.0"
fastapi = "^0.73.0"
fastapi-health = "^0.4.0"
tortoise-orm = "^0.18.1"
fastapi-utils = "^0.2.1"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
